# llm_yolo

./: .gitignore  README.md  base.md  cyclonedds_dashboard.xml  cyclonedds_local.xml  guide.md  object_memory_plan.md  plan.md  progress.md  real_plan.md  real_plan_progress.md  topology_graph_plan.md
.agent/workflows/: plan-fixer.md  plan-review.md
backends/real/go2_skill_server_real/: package.xml  setup.cfg  setup.py
backends/real/go2_skill_server_real/go2_skill_server_real/: approach_object_server.py  navigate_to_pose_server.py  rotate_in_place_server.py  scan_scene_server.py
backends/real/onboard_min_guard/: package.xml  setup.cfg  setup.py
backends/real/onboard_min_guard/onboard_min_guard/: deadman_stop_node.py
backends/real/perception_node_real/: package.xml  setup.cfg  setup.py
backends/real/perception_node_real/perception_node_real/: perception_node.py
backends/sim/go2_skill_server_sim/: package.xml  setup.cfg  setup.py
backends/sim/go2_skill_server_sim/go2_skill_server_sim/: approach_object_server.py  navigate_to_pose_server.py  rotate_in_place_server.py  scan_scene_server.py
backends/sim/perception_node_sim/: package.xml  setup.cfg  setup.py
backends/sim/perception_node_sim/perception_node_sim/: detector.py  perception_node.py
configs/: llm_params.yaml  perception_params.yaml
configs/common/: llm_params.yaml  mission_params.yaml  named_places.yaml
configs/real/: real_nav_params.yaml  real_perception_params.yaml  real_topics.yaml  watchdog_params.yaml
configs/sim/: sim_named_places.yaml  sim_nav_params.yaml  sim_perception_params.yaml  sim_topics.yaml  sim_visible_objects.json
docs/: architecture.md  mission_plan_schema.md  named_places.md  real_mode.md  sim_mode.md  sim_ros2_contract.md  test_scenarios.md  wired_dev_mode.md
launch/: mvp_full.launch.py  mvp_offboard.launch.py  mvp_onboard_min.launch.py
launch/common/: mission_stack.launch.py
launch/real/: mvp_real.launch.py  onboard_min.launch.py
launch/sim/: mvp_sim.launch.py
llm_command_router/: package.xml  setup.cfg  setup.py
llm_command_router/config/: llm_params.yaml
llm_command_router/llm_command_router/: json_parser.py  llm_backend.py  llm_command_router_node.py  prompt_templates.py
llm_yolo_interfaces/: CMakeLists.txt  package.xml
llm_yolo_interfaces/action/: ApproachObject.action  NavigateToPose.action  RotateInPlace.action  ScanScene.action
llm_yolo_interfaces/msg/: Intent.msg
mission_manager/: package.xml  setup.py
mission_manager/config/: mission_params.yaml
mission_manager/mission_manager/: mission_manager_node.py  state_machine.py
robot_bringup/: package.xml  setup.py
scripts/: check_link.sh  monitor_dashboard.py  monitor_sim.sh  record_bag.sh  run_monitor_dashboard.sh  run_offboard.sh  run_onboard_min.sh  run_real.sh  run_sim.sh
tests/: test_deadman_stop.md  test_intent_parser.py  test_mission_manager.py  test_named_places.py
