<?xml version="1.0"?>
<package format="3">
  <name>llm_yolo_interfaces</name>
  <version>0.0.1</version>
  <description>Interfaces for the llm_yolo MVP.</description>
  <maintainer email="jnu@example.com">jnu</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
