<?xml version="1.0"?>
<package format="3">
  <name>mission_manager</name>
  <version>0.0.1</version>
  <description>Mission manager for llm_yolo MVP.</description>
  <maintainer email="jnu@example.com">jnu</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>llm_yolo_interfaces</depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
